# askiplot

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  common.mk
examples/: Makefile  README.md  bar_grouper.cpp  fusion.cpp  gaussian.cpp  grid.cpp  groupedbars.cpp  lines.cpp  logo.cpp  textlines.cpp  turing.cpp  turing_animated.cpp
include/: askiplot.hpp
include/AskiPlot/: AskiPlot.hpp
include/askiplot/: askiplot.hpp  version.hpp.config
src/: main.cpp  test.cpp
tools/: Makefile  askibars.cpp
